<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textAmount"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNumOfPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_pax" />

            <EditText
                android:id="@+id/editNumOfPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_No_Of_Pax"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/tbSVS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ToggleButton"
                    android:textOff="@string/svsDisabled"
                    android:textOn="@string/svsEnabled" />

                <ToggleButton
                    android:id="@+id/tbGST"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ToggleButton"
                    android:textOff="@string/gstDisabled"
                    android:textOn="@string/gstEnabled" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textdiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discount" />

                <EditText
                    android:id="@+id/editDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/adddiscount"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rdcash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/cash" />

                    <RadioButton
                        android:id="@+id/rdpaynow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/paynow" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbSplit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="@string/splitdisabled"
                android:textOn="@string/splitenabled" />

            <ToggleButton
                android:id="@+id/tbReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="@string/resetdisabled"
                android:textOn="@string/resetenabled" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTotalPays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/totalpay" />

            <TextView
                android:id="@+id/txtEachPays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eachPays" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>